# 2026_Teamwork_RScpp

./: .gitignore  CMakeLists.txt  README.md  build_msys2_ucrt.ps1
docs/: Coding_style.md  student_tasks.md
include/rs/: Algorithms.h  DataObject.h  GLWidget3D.h  Geometry.h  LayerManager.h  MainWindow.h  ProcessingAlgorithm.h  RasterIO.h  RasterRenderDialog.h
src/: Algorithms.cpp  GLWidget3D.cpp  MainWindow.cpp  RasterIO.cpp  RasterRenderDialog.cpp  main.cpp
